Layout bug on accordion fixed

--- a/service-front/assets/sass/_shame.scss
+++ b/service-front/assets/sass/_shame.scss
@@ -40,5 +40,6 @@
 .current {
 	+ .complete {
 		margin-top: $gutter;
+		clear: left;
 	}
 }
